# cs24

./: .gitignore  README.md  flake.nix
.github/workflows/: ci.yml
lab01/code/: Solution.cpp
labs/lab01/code/: 3sum_analysis.cpp  default.nix  meson.build
labs/lab01/writeup/: default.nix  main.typ  mkTypstDerivation.nix
labs/lab02/: default.nix  intlist.cpp  intlist.h  justfile  testlist.cpp
labs/lab02/code/: intlist.cpp  intlist.h  meson.build  testrest.cpp
labs/lab02/writeup/: main.typ
labs/lab03/: default.nix  intbst.cpp  intbst.h  justfile  meson.build  testbst.cpp
nix/: mkTypstDerivation.nix
pa/pa01/: Makefile  card.cpp  card.h  card_list.cpp  card_list.h  default.nix  game_set.cpp  game_set.h  justfile  main.cpp  main_set.cpp  meson.build  tests  tests.cpp
